Save work somewhere, will fixup commit when things are more concrete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,12 @@ project(ImGuiNodeEditor)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Point CMake where to look for module files.
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Support/CMakeModules)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Support/CMakeModules)
 
 set(CMAKE_CXX_STANDARD            14)
 set(CMAKE_CXX_STANDARD_REQUIRED   YES)
+
+set(IMGUI_NODE_EDITOR_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 if (DEFINED MSVC_VERSION)
     if (MSVC_VERSION GREATER_EQUAL 1500)
